tests/ui/diagnostic_namespace/suggest_typos.stderr
error: unknown diagnostic attribute
  --> $DIR/suggest_typos.rs:3:15
   |
LL | #[diagnostic::onunimplemented]
   |               ^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/suggest_typos.rs:1:9
   |
LL | #![deny(unknown_or_malformed_diagnostic_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: an attribute with a similar name exists
   |
LL | #[diagnostic::on_unimplemented]
   |               ~~~~~~~~~~~~~~~~

error: unknown diagnostic attribute
  --> $DIR/suggest_typos.rs:8:15
   |
LL | #[diagnostic::un_onimplemented]
   |               ^^^^^^^^^^^^^^^^
   |
help: an attribute with a similar name exists
   |
LL | #[diagnostic::on_unimplemented]
   |               ~~~~~~~~~~~~~~~~

error: unknown diagnostic attribute
  --> $DIR/suggest_typos.rs:13:15
   |
LL | #[diagnostic::on_implemented]
   |               ^^^^^^^^^^^^^^
   |
help: an attribute with a similar name exists
   |
LL | #[diagnostic::on_unimplemented]
   |               ~~~~~~~~~~~~~~~~

error: aborting due to 3 previous errors

